[package]
name = "daylight"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
flatbuffers = "24.3.25"
futures = "0.3"
reqwest = "0.12"
http = "1.3"
thiserror = "2.0.17"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time"]}
tree-sitter = "0.25.10"
tree-sitter-agda = "1.3.0"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-highlight = "0.25.10"

[build-dependencies]
