[package]
name = "daylight"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[lib]
name = "daylight"
path = "lib/lib.rs"

[[bin]]
name = "daylight-server"
path = "bin/server.rs"

[[bin]]
name = "daylight-client"
path = "bin/client.rs"

[[bin]]
name = "daylight-stress-test"
path = "bin/stress-test.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
flatbuffers = "24.3.25"
futures = "0.3"
glob = "0.3"
reqwest = "0.12"
http = "1.3"
thiserror = "2.0.17"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry-instrumentation-sdk = "0.23"
init-tracing-opentelemetry = { version = "0.23", features = ["otlp", "tracing_subscriber_ext"] }
axum-tracing-opentelemetry = "0.23"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tree-sitter = "0.25.10"
tree-sitter-agda = "1.3.0"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-highlight = "0.25.10"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[build-dependencies]
